--- a/frontend/src/components/home/home.html
+++ b/frontend/src/components/home/home.html
@@ -94,13 +94,12 @@
 <div id="cars-listing" ng-init="init()" class="container mt-4">
     <div class="row">
         <div class="col-md-6 col-xs-6" style="border-radius: 10px;" ng-repeat="car in filteredCars = (allCars | orderBy:'-createdAt' | carFilters: search:priceFilter:category:city)">
-            <div class="panel panel-default car-panel" ng-click="redirectCarPage(car.id)">
+            <div class="panel panel-default car-panel" ng-click="redirectCarPage(car._id)">
                 <div class="panel-body"> 
-                    <img class="img-responsive center-block car-image" style="width: 300px; height: 200px;"  ng-src="{{ car.vehicleImages[0] || 'default-car.jpg' }}" alt="{{ car.carName }}">
+                    <img class="img-responsive center-block car-image" style="width: 300px; height: 200px;"  ng-src="{{ car.vehicleImages[0].url || 'default-car.jpg' }}" alt="{{ car.carName }}">
                     <div class="car-details text-center">
-                        <h4 class="text-primary">{{ car.carName }} ({{ car.carModel }})</h4>
-                        <p class="price-tag"><strong>$ {{ car.carPrice }}</strong> per day</p>
-                        <p><i class="fa fa-car"></i> <strong>Type:</strong> {{ car.carType }}</p>
+                        <h4 class="text-primary">{{ car.name }} ({{ car.modelYear }})</h4>
+                        <p class="price-tag"><strong>$ {{ car.price }}</strong> per day</p>
                         <p><i class="fa fa-tag"></i> <strong>Category:</strong> {{ car.category }}</p>
                         <p><i class="fa fa-tachometer"></i> <strong>Mileage:</strong> {{ car.mileage }} kmpl</p>
 
