changed the route protection login on the frontend

--- a/frontend/src/components/car/addCarForm.html
+++ b/frontend/src/components/car/addCarForm.html
@@ -4,24 +4,28 @@
     <h2 class="text-center">Add a New Car</h2>
     <form id="addCarForm" class="form-horizontal">
         
-
-        <div class="form-group">
-            <label class="col-sm-3 control-label" for="carType">Car Type:</label>
-            <div class="col-sm-9">
-                <select class="form-control" id="carType" name="carType" ng-model="carType" required>
-                    <option value="" disabled selected>Select Car Type</option>
-                    <option value="4-seater">4 Seater</option>
-                    <option value="6-seater">6 Seater</option>
-                    <option value="8-seater">8 Seater</option>
-                </select>
-            </div>
-        </div>
-        
-
         <div class="form-group">
             <label class="col-sm-3 control-label" for="carName">Car Name:</label>
             <div class="col-sm-9">
                 <input type="text" class="form-control" id="carName" name="carName" ng-model="carName" placeholder="Write the whole name for better searches" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label" for="company">Company:</label>
+            <div class="col-sm-9">
+                <select class="form-control" id="company" name="company" ng-model="company">
+                    <option value="" disabled selected>Select Car company</option>
+                    <option value="Toyota">Toyota</option>
+                    <option value="Ford">Ford</option>
+                    <option value="Honda">Honda</option>
+                    <option value="BMW">BMW</option>
+                    <option value="Mercedes-Benz">Mercedes-Benz</option>
+                    <option value="Tesla">Tesla</option>
+                    <option value="Chevrolet">Chevrolet</option>
+                    <option value="Nissan">Nissan</option>
+                    <option value="Hyundai">Hyundai</option>
+                    <option value="Volkswagen">Volkswagen</option>
+                </select>
             </div>
         </div>
 
@@ -44,6 +48,17 @@
                 </select>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label" for="fuelType">Fuel type:</label>
+            <div class="col-sm-9">
+                <select class="form-control" id="fuelType" name="fuelType" ng-model="fuelType">
+                    <option value="" disabled selected>Select Car Fuel Type</option>
+                    <option value="petrol">Petrol</option>
+                    <option value="diesel">diesel</option>
+                    <option value="electric">Electric</option>
+                </select>
+            </div>
+        </div>
 
 
         <div class="form-group">
@@ -57,7 +72,12 @@
                 </select>
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="col-sm-3 control-label" for="color">Car Color:</label>
+            <div class="col-sm-9">
+                <input type="color" class="form-control" id="color" name="color" ng-model="color" required>
+            </div>
+        </div>
 
         <div class="form-group">
             <label class="col-sm-3 control-label" for="carPrice">Car Price per Day:</label>
@@ -81,6 +101,20 @@
                 <input type="file" class="form-control" id="imageUpload" accept=".jpg, .jpeg, .png" multiple onchange="angular.element(this).scope().previewImages(this)">
             </div>
         </div>
+        <div class="form-group"  class="col-sm-3 control-label" ng-class="{'has-error': userForm.city.$touched && userForm.city.$invalid}">
+            <label for="city">City:</label>
+            <select class="form-control" id="city" name="city" ng-model="city" required>
+              <option value="" disabled selected>Please select car city</option>
+              <option value="Delhi">Delhi</option>
+              <option value="Mumbai">Mumbai</option>
+              <option value="Gwalior">Gwalior</option>
+              <option value="Bhind">Bhind</option>
+              <option value="Gurugram">Gurugram</option>
+              <option value="Agra">Agra</option>
+              <option value="Shiv puri">Shiv Puri</option>
+            </select>
+            <span class="help-block" ng-show="userForm.city.$error.required && userForm.city.$touched">Please select a city.</span>
+          </div>
 
 
         <div class="form-group">
@@ -92,28 +126,7 @@
                 </div>
             </div>
         </div>
-
-
-        <fieldset class="form-group">
-            <legend class="col-sm-12">Select Car Features:</legend>
-            <div class="col-sm-offset-3 col-sm-9">
-                <div class="checkbox">
-                    <label><input type="checkbox" ng-model="GPS"> GPS Navigation</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" ng-model="Sunroof"> Sunroof</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" ng-model="Bluetooth"> Bluetooth Connectivity</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" ng-model="RearCamera"> Rear Camera</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" ng-model="HeatedSeats"> Heated Seats</label>
-                </div>
-            </div>
-        </fieldset>
+       
 
 
         <div class="form-group">
@@ -121,6 +134,13 @@
                 <button type="submit" class="btn btn-success btn-block" ng-click="submitCarForm()">Add Car</button>
             </div>
         </div>
+            <!-- Loading Spinner -->
+<div class="text-center" ng-show="isLoading">
+    <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+    <span>Loading...</span>
+</div>
 
     </form>
+
+
 </div>
