--- a/frontend/src/components/admin/carApprovals/carApprovals.html
+++ b/frontend/src/components/admin/carApprovals/carApprovals.html
@@ -26,8 +26,8 @@
                     </div>
                     
                     <div class="text-center">
-                        <button class="btn btn-success" ng-click="approveCar(car.id)">Approve</button>
-                        <button class="btn btn-danger" ng-click="rejectCar(car.id)">Reject</button>
+                        <button class="btn btn-success" ng-click="approveCar(car._id)">Approve</button>
+                        <button class="btn btn-danger" ng-click="rejectCar(car._id)">Reject</button>
                     </div>
                 </div>
             </div>
