--- a/frontend/src/components/booking/ownerBookings/ownerBookings.html
+++ b/frontend/src/components/booking/ownerBookings/ownerBookings.html
@@ -9,7 +9,11 @@
 
     <h3 class="text-center text-muted" ng-if="bookings.length === 0">NO BIDDINGS</h3>
 
-
+<!-- Loading Spinner -->
+<div class="text-center" ng-show="isLoading">
+    <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+    <span>Loading...</span>
+</div>
     <div class="table-responsive" ng-if="bookings.length > 0">
         <table class="table table-striped table-bordered table-hover">
             <thead class="thead-dark">
@@ -26,10 +30,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="booking in bookings | ownerBookingFilter:searchCarName | orderBy: '-createdAt'">
-                    <td>{{ booking.vehicle.carName }}</td>
-                    <td>{{ booking.vehicle.carModel }}</td>
-                    <td>${{ booking.vehicle.carPrice }}</td>
+                <tr ng-repeat="booking in bookings | orderBy: '-createdAt'">
+                    <td>{{booking.vehicle.company}} {{ booking.vehicle.name }}</td>
+                    <td>{{ booking.vehicle.modelYear }}</td>
+                    <td>${{ booking.vehicle.price }}</td>
                     <td>${{ booking.amount }}</td>
                     <td>{{ booking.startDate | date:'yyyy-MM-dd' }}</td>
                     <td>{{ booking.endDate | date:'yyyy-MM-dd' }}</td>
@@ -40,12 +44,12 @@
                         <p><strong>Username:</strong> {{ booking.from.username }}</p>
                     </td>
                     <td class="text-center">
-                        <button ng-click="approveBidding(booking.id)" 
+                        <button ng-click="approveBidding(booking._id)" 
                                 ng-if="!checkApproved(booking)" 
                                 class="btn btn-success">
                             Approve
                         </button>
-                        <button ng-click="rejectBidding(booking.id)" 
+                        <button ng-click="rejectBidding(booking._id)" 
                                 ng-if="!checkApproved(booking)" 
                                 class="btn btn-danger">
                             Reject
