--- a/frontend/src/components/booking/userBookings/userBookings.html
+++ b/frontend/src/components/booking/userBookings/userBookings.html
@@ -4,15 +4,25 @@
 <button style="margin-left: 20px;" ng-click="back()"><<<</button>
 <body ng-init="init()">
     <div class="container">
+       
+        
         <h1 class="text-center" ng-show="bookings.length > 0">Confirmed Bookings</h1>
         <h1 class="text-center text-muted" ng-show="bookings.length === 0">No bookings scheduled</h1>
         <br>
-
         <div class="text-center" ng-show="bookings.length > 0">
             <uib-pagination total-items="bookings.length" ng-model="page" items-per-page="5" max-size="5"
                 boundary-links="true" previous-text="&laquo;" next-text="&raquo;" class="pagination-sm">
             </uib-pagination>
         </div>
+        <div class="panel panel-default p-3">
+            <label for="sortBy" class="control-label">Sort By:</label>
+            <select id="sortBy" class="form-control" ng-model="sortBy"  ng-change="handleSorting()">
+                <option value="" disabled selected>Select Sorting Option</option>
+                <option value="amount">Price</option>
+                <option value="startDate">Start Date</option>
+            </select>
+        </div>
+       
         <table class="table table-striped table-bordered table-hover" ng-show="bookings.length > 0">
             <thead class="thead-dark">
                 <tr>
@@ -27,9 +37,9 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="booking in paginatedBookings | orderBy: '-createdAt'">
+                <tr ng-repeat="booking in bookings">
                     <td>{{$index + 1}}</td>
-                    <td>{{booking.id}} 
+                    <td>{{booking._id}} 
                     <td><strong>${{calculateBookingPrice(booking.startDate, booking.endDate, booking.amount)}}</strong></td>
                     <td>{{booking.startDate | date: 'yyyy-MM-dd'}}</td>
                     <td>{{booking.endDate | date: 'yyyy-MM-dd'}}</td>
@@ -39,9 +49,9 @@
                         <p><strong>Email:</strong> {{booking.owner.email}}</p>
                     </td>
                     <td>
-                        <p><strong>Car Name:</strong> {{booking.vehicle.carName}}</p>
-                        <p><strong>Model:</strong> {{booking.vehicle.carModel}}</p>
-                        <p><strong>Type:</strong> {{booking.vehicle.carType}}</p>
+                        <p><strong>Car Name:</strong>{{booking.vehicle.company}} {{booking.vehicle.name}}</p>
+                        <p><strong>Model:</strong> {{booking.vehicle.modelYear}}</p>
+                        <p><strong>Fuel Type:</strong> {{booking.vehicle.fuelType}}</p>
                         <p><strong>Price:</strong> ${{booking.vehicle.carPrice}}</p>
                         <p><strong>Category:</strong> {{booking.vehicle.category}}</p>
                         <p><strong>Mileage:</strong> {{booking.vehicle.mileage}} kmpl</p>
@@ -75,7 +85,7 @@
         
         </div>
         <div class="text-center">
-          <ul uib-pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()" items-per-page="itemsPerPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+          <ul uib-pagination boundary-links="true" total-items="totalPages" ng-model="currentPage" ng-change="pageChanged()" items-per-page="itemsPerPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
         </div>
         </div>
 </body>
